fixed compilation problem